# rust-bucket

./: .gitignore  Cargo.toml  Dockerfile  README.md  hello.txt  output.txt
grep/: Cargo.toml
grep/src/: run.rs
hello_macro/: Cargo.toml
hello_macro/hello_macro_derive/: Cargo.toml
hello_macro/hello_macro_derive/src/: lib.rs
lang/: Cargo.toml
lang/src/: error.rs  generic.rs  lib.rs  std.rs
lang/src/error/: find.rs  guess.rs  version.rs
lang/src/generic/: complex.rs  impls.rs  point.rs  type_alias.rs
lang/src/std/: enums.rs  file.rs  macros.rs  rust.rs  thread.rs
lists/: Cargo.toml
lists/src/: fifth.rs  first.rs  fourth.rs  second.rs  third.rs
messenger/: Cargo.toml
messenger/src/: lib.rs
misc/: Cargo.toml
misc/src/: lib.rs  rust.rs  tokio.rs
misc/src/rust/: art.rs  closure.rs  find_crate.rs  flow.rs  mutex.rs  panic.rs  rectangle.rs  string.rs  tuples.rs
src/: main.rs  minigrep.rs  my_redis.rs  rds_srv.rs  rust_happy.rs
tests/: integration_test.rs
tests/common/: mod.rs
