[package]
name = "misc"
version = "0.1.0"
authors = ["happyspace <happyspace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "*"
simple_logger = "1.6.0"
rand = "^0.7.3"
owning_ref = "^0.4.1"
actix-rt = "^1.1.1"
tokio = { version="^0.2.22", features = ["full"] }
find-crate = "0.6.3"
proc-macro2 = "^1.0.26"
quote = "^1.0.8"


